Tweak the config with vue-related things

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "extends": [
-        "plugin:vue/essential",
-        "plugin:prettier/recommended",
-        "eslint:recommended"
+        "eslint:recommended",
+        "plugin:vue/recommended",
+        "plugin:prettier/recommended"
     ]
 }
