--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         }
     },
     "lint-staged": {
-        "*.js": [
+        "*.js|*.vue": [
             "eslint --fix",
             "git add"
         ]
