--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,14 @@
 {
+    "root": true,
     "extends": [
-        "eslint:recommended",
-        "plugin:vue/recommended",
-        "plugin:prettier/recommended"
+        
+        "plugin:vue/essential",
+        "plugin:prettier/recommended",
+        "eslint:recommended"
+    ],
+    "plugins": [
+        "prettier",
+        "vue"
     ]
+
 }
