--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,16 @@
 {
     "root": true,
+    "env": {
+        "node": true,
+        "commonjs": true
+    },
+    "parserOptions": {
+        "parser": "babel-eslint"
+    },
     "extends": [
-        
         "plugin:vue/essential",
         "plugin:prettier/recommended",
         "eslint:recommended"
     ],
-    "plugins": [
-        "prettier",
-        "vue"
-    ]
-
+    "plugins": ["vue", "prettier"]
 }
