--- a/package.json
+++ b/package.json
@@ -9,51 +9,40 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
-        "vue": "^2.6.6",
-        "vue-router": "^3.0.2",
-        "vue-wow": "^1.1.4",
-        "vuetify": "^1.5.5",
-        "vuex": "^3.1.0"
+        "axios-extensions": "^3.0.6",
+        "core-js": "^2.6.5",
+        "vue": "^2.6.10",
+        "vue-router": "^3.0.3",
+        "vuetify": "^2.0.0",
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.5.0",
-        "@vue/cli-plugin-eslint": "^3.5.0",
-        "@vue/cli-service": "^3.5.0",
+        "@vue/cli-plugin-babel": "^3.10.0",
+        "@vue/cli-plugin-eslint": "^3.10.0",
+        "@vue/cli-service": "^3.10.0",
         "babel-eslint": "^10.0.1",
-        "eslint": "^5.8.0",
-        "eslint-config-prettier": "^5.0.0",
+        "eslint": "^6.1.0",
+        "eslint-config-prettier": "^6.0.0",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-vue": "^5.0.0",
-        "husky": "^2.4.1",
-        "lint-staged": ">=8",
-        "node-sass": "^4.11.0",
+        "lint-staged": "^8.1.5",
         "prettier": "^1.18.2",
-        "pretty-quick": "^1.11.1",
+        "sass": "^1.18.0",
         "sass-loader": "^7.1.0",
-        "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.1",
-        "vue-cli-plugin-vuetify": "^0.5.0",
-        "vue-template-compiler": "^2.5.21",
-        "vuetify-loader": "^1.0.5"
-    },
-    "postcss": {
-        "plugins": {
-            "autoprefixer": {}
-        }
+        "vue-cli-plugin-vuetify": "^0.6.3",
+        "vue-template-compiler": "^2.6.10",
+        "vuetify-loader": "^1.2.2"
     },
     "browserslist": [
         "> 1%",
-        "last 2 versions",
-        "not ie <= 8"
+        "last 2 versions"
     ],
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
+    "gitHooks": {
+        "pre-commit": "lint-staged"
     },
     "lint-staged": {
-        "*.js|*.vue": [
-            "eslint --fix",
+        "*.{js,vue}": [
+            "vue-cli-service lint",
             "git add"
         ]
     }
