--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     },
     "browserslist": [
         "> 1%",
-        "last 2 versions"
+        "last 2 versions",
+        "not ie <= 8"
     ],
     "gitHooks": {
         "pre-commit": "lint-staged"
