--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^4.6.95",
     "axios": "^0.19.0",
     "axios-extensions": "^3.0.6",
     "core-js": "^2.6.5",
