--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "debounce": "^1.2.0",
         "echofetch": "^0.1.4",
         "vue": "^2.6.11",
         "vue-class-component": "^7.2.3",
@@ -21,6 +22,7 @@
         "vuex": "^3.4.0"
     },
     "devDependencies": {
+        "@types/debounce": "^1.2.0",
         "@typescript-eslint/eslint-plugin": "^2.33.0",
         "@typescript-eslint/parser": "^2.33.0",
         "@vue/cli-plugin-babel": "~4.4.0",
