--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,5 @@
 NODE_ENV=development
 VUE_APP_BACKEND_URL=http://localhost:3000
+VUE_APP_ROUTER_MODE=history
+VUE_APP_PUBLIC_PATH=/
+VUE_APP_SOURCEMAP=true
