Localize Roboto font

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "prettier": "^1.19.1",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
+        "typeface-roboto": "^0.0.75",
         "typescript": "~3.9.3",
         "vue-template-compiler": "^2.6.11"
     },
