--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
         - "npm run build:pages"
       deploy:
         provider: pages
+        github_token: $GITHUB_TOKEN
         skip_cleanup: true
         local_dir: dist/
         keep_history: true
