Update backend URL for Github Pages

--- a/.env.pages
+++ b/.env.pages
@@ -1,5 +1,5 @@
 NODE_ENV=production
-VUE_APP_BACKEND_URL=https://mock.g2-project.ga
+VUE_APP_BACKEND_URL=https://api.g2-project.ga
 VUE_APP_ROUTER_MODE=hash
 VUE_APP_PUBLIC_PATH=/
 VUE_APP_SOURCEMAP=true
