--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV=production
-VUE_APP_BACKEND_URL=http://52.137.51.108
+VUE_APP_BACKEND_URL=http://api.g2.zeus.gent
 VUE_APP_ROUTER_MODE=history
 VUE_APP_PUBLIC_PATH=/
 VUE_APP_SOURCEMAP=false
